@@ -1,5 +1,5 @@
 '\"
-'\" Copyright (c) 2006 ActiveState Software Inc
+'\" Copyright (c) 2006-2008 ActiveState Software Inc
 '\"
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
@@ -7,14 +7,14 @@
 '\" RCS: @(#) $Id$
 '\" 
 .so man.macros
-.TH "platform::shell" n 1.1.3 platform::shell "Tcl Bundled Packages"
+.TH "platform::shell" n 1.1.4 platform::shell "Tcl Bundled Packages"
 .BS
 '\" Note:  do not modify the .SH NAME line immediately below!
 .SH NAME
 platform::shell \- System identification support code and utilities
 .SH SYNOPSIS
 .nf
-\fBpackage require platform::shell ?1.1.3?\fR
+\fBpackage require platform::shell ?1.1.4?\fR
 .sp
 \fBplatform::shell::generic \fIshell\fR
 \fBplatform::shell::identify \fIshell\fR
