@@ -1,3 +1,3 @@
 package ifneeded platform        1.0.3 [list source [file join $dir platform.tcl]]
-package ifneeded platform::shell 1.1.3 [list source [file join $dir shell.tcl]]
+package ifneeded platform::shell 1.1.4 [list source [file join $dir shell.tcl]]
 
