@@ -104,8 +104,10 @@ proc ::platform::shell::LOCATE {bv ov} {
     # here. If the found package is wrapped we copy the code somewhere
     # where the spawned shell will be able to read it.
 
+    # Note: This code depends on the form of the 'provide' command
+    # generated by tm.tcl. Keep them in sync. See Bug 2255235.
     set pl [package ifneeded platform [package require platform]]
-    foreach {cmd base} $pl break
+    set base [lindex $pl end]
 
     set out 0
     if {[lindex [file system $base]] ne "native"} {
@@ -233,4 +235,4 @@ proc ::platform::shell::DIR {} {
 # ### ### ### ######### ######### #########
 ## Ready
 
-package provide platform::shell 1.1.3
+package provide platform::shell 1.1.4
