@@ -1,3 +1,13 @@
+2008-11-10  Andreas Kupries  <andreask@activestate.com>
+
+	* doc/platform_shell.n: Fixed [Bug 2255235], reported by Ulrich
+	* library/platform/pkgIndex.tcl: Ring <uring@users.sourceforge.net>.
+	* library/platform/shell.tcl: Updated the LOCATE command in the
+	* library/tm.tcl: package 'platform::shell' to handle the new form
+	* unix/Makefile.in: of 'provide' commands generated by tm.tcl. Bumped
+	* win/Makefile.in: package to version 1.1.4. Added cross-references
+	to the relevant parts of the code to avoid future desynchronization.
+
 2008-11-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* generic/tclInt.h:    Applied patch #2215022 from Duoas to clean up
